# video_app

./: .clang-format  CMakeLists.txt  compile_setup
lib/ffmpeg/: CMakeLists.txt
src/: load_frame.cpp  main.cpp  video_reader.cpp  video_reader.hpp
